--- a/demo.ipynb
+++ b/demo.ipynb
@@ -154,7 +154,7 @@
     "\n",
     "A few methods illustrate how `DPBEntity` could be extended to make other queries about an entity.\n",
     "\n",
-    "For example `is_person()` or `is_politician()."
+    "For example `is_person()` or `is_politician()`."
    ]
   },
   {
