--- a/demo.ipynb
+++ b/demo.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "We can see that one query was issued already at initialization. This `ASK` query checks that the requested entity exists in DBPedia, by asking whether it is an instance of the base class `Thing`.\n",
     "\n",
-    "If the requested entity is not in DBPedia, we get a `NotInDBPEdia` exception."
+    "If the requested entity is not in DBPedia, we get a `NotInDBPedia` exception."
    ]
   },
   {
