--- a/demo.ipynb
+++ b/demo.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## DBPEntity\n",
     "\n",
-    "The module uses the `DBPEntity` class to represent entities in DBPedia. To initilaize an instance of the class, supply the name of an entry from Wikipedia. The optional argument `verbose` toggles printing the text of SPARQL queries."
+    "The module uses the `DBPEntity` class to represent entities in DBPedia. To initialize an instance of the class, supply the name of an entry from Wikipedia. The optional argument `verbose` toggles printing the text of SPARQL queries."
    ]
   },
   {
