--- a/demo.ipynb
+++ b/demo.ipynb
@@ -83,14 +83,14 @@
    "outputs": [
     {
      "ename": "NotInDBPediaError",
-     "evalue": "('Angelika_Murkle', 'not in DBPedia.')",
+     "evalue": "Angelika_Murkle is not in DBPedia",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNotInDBPediaError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_4723/327322195.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdbptools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDBPEntity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Angelika Murkle'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/GitHub/DBpedia-tools/dbptools.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, verbose)\u001b[0m\n\u001b[1;32m    148\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresolved_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muri\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mNotInDBPediaError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformatted_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'not in DBPedia.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mis_person\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotInDBPediaError\u001b[0m: ('Angelika_Murkle', 'not in DBPedia.')"
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdbptools\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDBPEntity\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAngelika Murkle\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/GitHub/DBpedia-tools/dbptools.py:150\u001b[0m, in \u001b[0;36mDBPEntity.__init__\u001b[0;34m(self, name, verbose)\u001b[0m\n\u001b[1;32m    148\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mresolved_name \u001b[38;5;241m=\u001b[39m uri\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    149\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 150\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m NotInDBPediaError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mformatted_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not in DBPedia\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNotInDBPediaError\u001b[0m: Angelika_Murkle is not in DBPedia"
      ]
     }
    ],
@@ -231,7 +231,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "5a8d8b82-7d61-4316-8e83-e5365a5a9f5e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -275,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
